# islay

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
config/: config_default.json.in
docker-env/: Dockerfile  build.sh  create_and_start.sh  docker-compose.yml  opencv_build.sh  requirements.txt
include/: AppMsg.h  Application.h  Config.h  Engine.h  EngineSample.h  ImageTexture.h  InterThreadMessenger.hpp  Logger.h  Utility.h  WorkerSample.h  WorkerTest.h  imgui_apps.h
include/islay/: AppMsg.h  Application.h  Config.h  Engine.h  EngineBase.h  ImageTexture.h  Logger.h  PUBinder.h  Utility.h  Worker.cpp  Worker.h  imgui_apps.h
islay-win/: PropertySheet.props  islay-win.sln
islay-win/config/: config_win_default.json
islay-win/islay-win/: imgui.ini  islay-win.vcxproj  islay-win.vcxproj.filters  packages.config
src/: Application.cpp  Engine.cpp  EngineSample.cpp  WorkerSample.cpp  WorkerTest.cpp  main.cpp
